--- a/package.json
+++ b/package.json
@@ -2,13 +2,24 @@
   "name": "workspace",
   "version": "1.0.0",
   "description": "This code provides a working template for the development of modern Progressive Web App that needs to be connected to a running instance of the **Rest API Template**.",
+  "type": "module",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "fs-extra": "^9.0.1",
+    "handlebars": "^4.7.6",
+    "koa": "^2.13.0",
+    "koa-router": "^9.4.0",
+    "koa-static": "^5.0.0",
+    "koa-views": "^6.3.1"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
