--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "koa-static": "^5.0.0",
     "koa-views": "^6.3.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^7.15.0"
+  },
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
