Added ava unit test to the github action

--- a/.github/workflows/mainAction.yml
+++ b/.github/workflows/mainAction.yml
@@ -1,6 +1,6 @@
 # .github/workflows/single-stage.yml
 
-name: running linter
+name: Main Action 
 
 on:
   push:
@@ -20,3 +20,16 @@ jobs:
         run: npm install
       - name: run the linter
         run: ./node_modules/.bin/eslint .
+  AvaUnitTest:
+    runs-on: ubuntu-latest
+	steps:
+	  - uses: actions/checkout@v2
+	  - name: Use NodeJS
+	    uses: actions/setup-node@v1
+		with:
+		  node-version: 14.x
+	  - name: Install ava testing tool
+	    run: npm install
+	  - name: run the test
+	    run: npm test
+    
