--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
     "koa-views": "^6.3.1"
   },
   "devDependencies": {
-	"ava": "^3.14.0",  
     "eslint": "^7.15.0"
   },
   "scripts": {
     "start": "node index.js",
-    "test": "ava"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
