--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,8 @@
 			"src": "icons/maskable_icon.png",
 			"type": "image/png",
 			"purpose": "any maskable",
-			"sizes": "72x72 96x96 120x120 128x128 144x144 152x152 180x180 192x192 256x256 384x384 512x512 1024x1024"
+			"sizes": "72x72"
 		}
 	]
 }
+//96x96 120x120 128x128 144x144 152x152 180x180 192x192 256x256 384x384 512x512 1024x1024
